--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "FEC project for Hack Reactor",
   "main": "client/src/index.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "client-dev": "npx webpack --watch",
     "server-dev": "nodemon server"
   },
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.21",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
