--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/cli": "^7.21.0",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
+    "css-loader": "^6.7.3",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "react": "^18.2.0",
@@ -29,12 +30,14 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-refresh": "^0.14.0",
-    "react-testing-library": "^8.0.1"
+    "react-testing-library": "^8.0.1",
+    "style-loader": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^14.0.0",
     "babel-loader": "^9.1.2",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
