--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "nodemon": "^2.0.21",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
