--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-loader": "^9.1.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.21",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
