--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^6.7.3",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
+    "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-checkmark": "^1.4.0",
     "react-dom": "^18.2.0",
