--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-refresh": "^0.14.0",
+    "react-star-ratings": "^2.3.0",
     "react-testing-library": "^8.0.1",
     "style-loader": "^3.3.2"
   },
