--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/cli": "^7.21.0",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
+    "brotli": "^1.3.3",
+    "compression": "^1.7.4",
     "css-loader": "^6.7.3",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
